Fixed overflow

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,7 +1,7 @@
 footer {
   background-color: var(--clr-Orange);
   border-radius: 20px;
-  margin: 12px !important;
+  margin: 120px !important;
   /* margin-right: 12px !important; */
   padding: 20px !important;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
